public enum TrafficColor {
    GREEN,
    RED,
    YELLOW
}
