public enum TrafficDirection {
    NORTH,
    SOUTH,
    EAST,
    WEST
}
